k8s/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\coding\Projects\test\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\coding\Projects\test\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/test: "true"
        io.kompose.service: minio
    spec:
      containers:
        - env:
            - name: MINIO_ACCESS_KEY
              value: minio
            - name: MINIO_ROOT_PASSWORD
              value: miniosecret
            - name: MINIO_ROOT_USER
              value: minio
            - name: MINIO_SECRET_KEY
              value: miniosecret
          image: bitnami/minio:2022
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://testminio:9000/minio/health/live
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 20
          name: test-minio
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: minio-claim0
            - mountPath: /opt/bitnami/minio/log/
              name: minio-claim1
      hostname: testminio
      restartPolicy: Always
      volumes:
        - name: minio-claim0
          persistentVolumeClaim:
            claimName: minio-claim0
        - name: minio-claim1
          persistentVolumeClaim:
            claimName: minio-claim1
status: {}
