k8s/postgresql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: D:\coding\Projects\test\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/test: "true"
    io.kompose.service: postgresql
  name: postgresql
spec:
  containers:
    - env:
        - name: POSTGRES_DB
          value: postgres
        - name: POSTGRES_PASSWORD
          value: postgres
        - name: POSTGRES_USER
          value: postgres
      image: postgres:latest
      livenessProbe:
        exec:
          command:
            - pg_isready
        failureThreshold: 3
        periodSeconds: 30
        timeoutSeconds: 20
      name: test-postgres
      ports:
        - containerPort: 5432
      resources: {}
      volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresql-claim0
  hostname: testpostgres
  restartPolicy: OnFailure
  volumes:
    - name: postgresql-claim0
      persistentVolumeClaim:
        claimName: postgresql-claim0
status: {}
