k8s/registry-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: D:\coding\Projects\test\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/test: "true"
    io.kompose.service: registry
  name: registry
spec:
  containers:
    - env:
        - name: LOG_LEVEL
          value: INFO
        - name: NIFI_REGISTRY_DB_DIR
          value: /opt/nifi-registry/nifi-registry-current/database
        - name: NIFI_REGISTRY_FLOW_PROVIDER
          value: file
        - name: NIFI_REGISTRY_FLOW_STORAGE_DIR
          value: /opt/nifi-registry/nifi-registry-current/flow_storage
      image: apache/nifi-registry:latest
      name: test-registry
      ports:
        - containerPort: 18080
      resources: {}
      volumeMounts:
        - mountPath: /opt/nifi-registry/nifi-registry-current/database
          name: registry-claim0
        - mountPath: /opt/nifi-registry/nifi-registry-current/flow_storage
          name: registry-claim1
  hostname: testregistry
  restartPolicy: OnFailure
  volumes:
    - name: registry-claim0
      persistentVolumeClaim:
        claimName: registry-claim0
    - name: registry-claim1
      persistentVolumeClaim:
        claimName: registry-claim1
status: {}
